--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 			<p>Date: October 21th</p>
 			<p>Inspiration: Pokemon</p>
 		</div>
+		
+		<div>
+		<img src="QR.png">
+		</div>
 
 		<button id="bg" onclick="change_background()" style="position: absolute;height: 100px;width: 150px; top: 375px; left: 50%; margin-left: -350px;"><font size="+2">Change background</font></button>
 
