--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		</div>
 		
 		<div>
-		<img src="QR.png">
+		<img src="QR.png" style="position: absolute;top: 300px;left: 20%; margin-left: -650px;">
 		</div>
 
 		<button id="bg" onclick="change_background()" style="position: absolute;height: 100px;width: 150px; top: 375px; left: 50%; margin-left: -350px;"><font size="+2">Change background</font></button>
