--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
 		</div>
 		
 		<div>
-		<img src="QR.png" style="position: absolute;top: 300px;left: 20%; margin-left: -650px;">
+		<img src="QR.png" style="position: absolute;top: 300px;left: 20%;width: 100px;height: 100px;">
 		</div>
 
 		<button id="bg" onclick="change_background()" style="position: absolute;height: 100px;width: 150px; top: 375px; left: 50%; margin-left: -350px;"><font size="+2">Change background</font></button>
 
 		<button id="theme" onclick="change_theme()" style="position: absolute;height: 100px;width: 150px; top: 375px; left: 50%; margin-left: -150px;"><font size="+2">Change theme</font></button>
 
-		<button id="colour" onclick="change_box()" style="position: absolute;height: 100px;width: 150px; top: 375px; left: 60%;px;margin-left: -120px"><font size="+2">Change box</font></button>
+		<button id="colour" onclick="change_box()" style="position: absolute;height: 100px;width: 150px; top: 375px; left: 70%;px;margin-left: -120px"><font size="+2">Change box</font></button>
 
 		<script type="text/javascript">
 			var bg1 = "url('bg.png')"
