--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
 			<p>Inspiration: Pokemon</p>
 		</div>
 		
-		<div>
-		<img src="QR.png" style="position: absolute;top: 300px;left: 20%;width: 100px;height: 100px;">
-		</div>
+		<img src="QR.png" style="position: absolute;width: 100px; height:100px;top: 300px;left: 10%;">
 
 		<button id="bg" onclick="change_background()" style="position: absolute;height: 100px;width: 150px; top: 375px; left: 50%; margin-left: -350px;"><font size="+2">Change background</font></button>
 
